termine de poner las imagenes y cree galeria1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi pagina web</title>
 </head>
-<body>
+<body bgcolor="yellow">
     <center>
     <h1>bienvenidos a mi pagina web</h1>
     
@@ -17,14 +17,23 @@
     <h2>etiquetas</h2>
     <p>en la actualiudad, la educacion enfrenta importantes desafios tecnologicos y sociales en un mundo cada vez mas desafiante</p>
     <ul>de acuerdo con la <a href="https://www.unesco.com" tarjet="black"><b>unesco</b></a>
-    <a href="prueba1.html"><b>desarrollo sostenible</b></a>es garantizar una educacion aso como promover oportunidades de aprendizaje permanente para todos.
+    <a href="gale1/prueba1.html"><b>desarrollo sostenible</b></a>es garantizar una educacion aso como promover oportunidades de aprendizaje permanente para todos.
     <li><h3>galerias</h3></li>
     </ul>
 
     <a href="prueba1.html"><li>galeria uno</li> </a>
-    <a href=""></a>
-
-
+    <a href="prueba2.html"><li>galeria dos</li> </a>
+    <a href="prueba3.html"><li>galeria tres</li> </a>
+    
+<ul>
+en este sentido, las tecnologias emergentes, como <u>la inteligencia artificial(AI)</u>
+y la vision artificial, han mostradosu potencial para transformar el ambito educativo al automatizar
+procesos y mejorar la eficiencia en la gestion educativa
+</ul>
+<ul>
+    la unesco resalta que la innovacion tecnologica debe integrarse en lasinstituciones educativas para modernizar las practicas administrativas y pedagogicas,
+    lo que permite optimizar el tiempo y los recursos de docentes y administradores
+</ul>
 
 
 
