--- a/prueba1.html
+++ b/prueba1.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>prueba 1 </title>
 </head>
 <body>
-    <h1>desarrollo sostenible</h1>
+      <center>
+        <h1>desarrollo sostenible</h1>
+        <a href="index.html">incio</a><br>
+        <hr size= "10" >
+
+        <img src="imagenes/imagen1.jpg"width="250" height="250">
+        <img src="imagenes/imagen2.jpg"width="250" height="250">
+        <img src="imagenes/imagen3.jpg"width="250" height="250">
+        <img src="imagenes/imagen4.jpg"width="250" height="250">
+        <img src="imagenes/imagen5.jpg"width="250" height="250">
+        <img src="imagenes/imagen6.jpg"width="250" height="250">
+        <img src="imagenes/imagen7.jpg"width="250" height="250">
+        <img src="imagenes/imagen8.jpg"width="250" height="250">
+        <img src="imagenes/imagen9.jpg"width="250" height="250">
+
+      </center>
+      <div style="text-align: right;" >
+      <a href="gale1/img.html">siguente</a>
+      </div>
+      <a href="index.html">atras</a> 
 </body>
 </html>
