--- a/gale1/img2.html
+++ b/gale1/img2.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imagen</title>
+    <title>imagen 2 </title>
 </head>
 <body>
     <center>
-    <h3>imagen1</h3>
-    <img src="../imagenes/imagen1.jpg">
-        </center>
-        <center>
+    <h3>imagen 2</h3>
+    <img src="../imagenes/imagen2.jpg">
+    </center>
+    <center>
     <a href="../prueba1.html">inicio galeria 1</a>
     </center>
     <div style="text-align: right;" >
-    <a href="img2.html">siguente</a>
+
+        <a href="img3.html">siguente</a>
     </div>
+    <div style="text-align: left;">
+        <a href="img.html">atras</a>
+    </div>
+        
 </body>
 </html>
