--- a/gale2/img.html
+++ b/gale2/img.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imagen</title>
+    <title>imagen 1</title>
 </head>
 <body>
     <center>
-    <h3>imagen1</h3>
-    <img src="../imagenes/imagen1.jpg">
-        </center>
-        <center>
-    <a href="../prueba1.html">inicio galeria 1</a>
+        <h3>galeria 1</h3>
+        <img src="../imagenes/suecia.jpg">
+    </center>
+    <center>
+        <a href="../prueba2.html">inicio galeria 2</a>
     </center>
     <div style="text-align: right;" >
-    <a href="img2.html">siguente</a>
+      <a href="img2.html">siguente</a>
+
     </div>
 </body>
 </html>
