--- a/gale3/img.html
+++ b/gale3/img.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imagen</title>
+    <title>capital 1</title>
 </head>
 <body>
     <center>
-    <h3>imagen1</h3>
-    <img src="../imagenes/imagen1.jpg">
-        </center>
-        <center>
-    <a href="../prueba1.html">inicio galeria 1</a>
+        <h3>Estocolmo</h3>
+        <img src="../imagenes/estocolmo.jfif">
+    </center>
+    <center>
+        <a href="../prueba3.html">inicio galeria 3</a>
     </center>
     <div style="text-align: right;" >
-    <a href="img2.html">siguente</a>
+        <a href="img2.html">siguente</a>
     </div>
 </body>
 </html>
