--- a/prueba2.html
+++ b/prueba2.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>galeria 2 </h1>
+    <center>
+        <h1>galeria3</h1>
+        <a href="index.html">inicio</a>
+        <hr size="10" >
+
+        <img src="imagenes/dinamarca.jpg" width="300" height="300" >
+        <img src="imagenes/estonia.jpg" width="300" height="300" >
+        <img src="imagenes/canada.jpg" width="300" height="300" > <br>
+        <img src="imagenes/brasil.jpg" width="300" height="300" >
+        <img src="imagenes/finlandia.jpg" width="300" height="300" >
+        <img src="imagenes/islandia.jpg" width="300" height="300" > <br>
+        <img src="imagenes/nuevazelanda.jpg" width="300" height="300" > 
+        <img src="imagenes/portugal.jpg" width="300" height="300" >
+        <img src="imagenes/suecia.jpg" width="300" height="300" >
+    </center>
+    <div style="text-align: right;" >
+      <a href="gale2/img.html">siguente</a>
+      </div>
 </body>
 </html>
