--- a/prueba3.html
+++ b/prueba3.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <center>
     <h1>galeria 3 </h1>
+    <a href="index.html">inicio</a>
+    </center>
+    <hr size="10" >
+    <center>
+    <img src="imagenes/estocolmo.jfif" width="300" height="300" >
+    <img src="imagenes/brasilia.jpg "  width="300" height="300">
+    <img src="imagenes/canberra.jpg" width="300" height="300" ><br>
+    <img src="imagenes/copenhague.jpg" width="300"  height="300" >
+    <img src="imagenes/helsinki.jpeg" width="300" height="300" >
+    <img src="imagenes/ottawa.jpg" width="300" height="300" > <br>
+    <img src="imagenes/raikyvia.jpg" width="300" height="300" >
+    <img src="imagenes/talin.jpg" width="300" height="300" >
+    <img src="imagenes/wellinston.jpg" width="300" height="300" >
+        </center>
+        <div style="text-align: right;" >
+            <a href="gale3/img.html">siguente</a>
+        </div>
 </body>
 </html>
